src/styles/global.css
@import url(https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400;600;700);
@import '~semantic-ui-css/semantic.min.css';
@import './select.css'; 

html, body {
  width: 100%;
  height: 100%;
  overflow: hidden;
  font-size: 15px;
}

html {
  scroll-padding-top: 60px;
}

body {
  font-family: 'Source Sans Pro', sans-serif;
  color: #5d5d5d;
  margin: 0px;
}

h1 {
    font-family: inherit;
    color: #103c68;
    font-size: 1.8rem;
    margin-top: 0;
}
  
h2 {
  color: #103c68;
  font-size: 1.3em;
  margin: 30px 0 20px 0;
}
  
h3 {
  color: #5d5d5d;
  font-size: 1.1em;
  font-weight: 600;
}
  
p {
  font-family: inherit;
  font-size: 0.96rem;
  line-height: 1.5 !important;
  font-weight: 400;
}

ul li {
  line-height: 1.55;
}
  
a {
  color: #064e96;
  text-decoration: none;
}

.small {
  display: block;
  color: #5d5d5d;
  font-size: 0.9em;
  font-weight: 500;
  margin: 4px 0;
}

.emphasis {
  font-weight: 600;
}

.light {
  font-weight: 300;
}

.popup-table {
  width: 100%;
  border-collapse: collapse;
  text-align: left;
  border: 3px solid #f2f2f2;
}

.popup-table tr td {
  font-size: 12px;
  vertical-align: top;
  font-weight: 400;
  padding: 4px;
  border: 3px solid #f2f2f2;
}

.ui.modal > .header {
  color: #5d5d5d !important;
}

/* To position download button to the right on modal header using flexbox */
.ui.header > .icon + .content {
  width: 100%;
}

/* Layer List Styles */

.esri-layer-list {
  background-color: #fff !important;
  padding: 0 !important;
}

/* Layer title container */
.esri-layer-list__item-container {
  padding: 4px 4px 4px 0 !important;
}

.esri-layer-list__item-container:hover {
  background-color: #e2f1fb;
}

/* Layer title */
.esri-layer-list__item-title {
  font-family: 'Source Sans Pro', sans-serif;
  font-size: 0.92em;
}

/* Sub-layer title */
.esri-legend h3 {
  font-size: 0.88em !important;
}

/* Layer list item container, including legend */
.esri-layer-list__item {
  border-bottom: 0 !important;
}

/* Hide layer list icon on right */
.esri-icon-layer-list {
  display: none !important;
}

/* 
Container list item legend contents, when expanded 
Adds indentation to legend items
*/
.esri-layer-list-panel {
  margin: 0 0 0 23px !important;
}

/* Removes padding at bottom of legend contents */
.esri-legend__service {
  padding: 0 !important;
}

/* Removes padding at bottom of legend contents */
.esri-legend__layer-table {
  font-family: 'Source Sans Pro', sans-serif !important;
  margin: 0 !important;
}

/* 
Icon to the left of each list item
Replace the default eyeball icon with a checkbox icon. The codes on ESRI's website do not work. I had to remove the 'u' in '\ue610' and '\ue611' to get them to work. Not sure why, maybe a bug?
https://developers.arcgis.com/javascript/latest/esri-icon-font/#esri-icon-fonts
https://stackoverflow.com/questions/67654247/single-layer-visible-toggle-in-layerlist-widget-arcgis-javascript-4-x
*/

.esri-icon-non-visible::before {
  content: "\e610" !important;
}

.esri-icon-visible::before {
  content: "\e611" !important;
}

.esri-legend__message {
  display: none;
}

/* End Layer List Styles */

/* Data table style for changing styles in header row. Could not find a way to through it through the library styles. */
.rdt_TableCol_Sortable div {
  line-height: 1.2 !important;
  font-weight: 600 !important;
}

/* Hide close button in map popups */
.esri-popup__header-buttons {
  display: none !important;
}

.esri-popup__header h2 {
  font-size: 1em !important;
  font-weight: 400;
  background-color: #1a252f !important; /* #1a252f #103350 */
  padding: 6px 10px;
  margin: 0;
}

.esri-feature-content h3 {
  font-size: 1.1em;
  color: #103c68;
}

.esri-popup--shadow {
  box-shadow: 0 1px 4px rgba(0, 0, 0, .2) !important;
}

.esri-popup__main-container.esri-widget {
  width: auto !important;
  max-width: 300px !important;
}

.esri-popup__content {
  margin: 8px 0 !important;
}

/* To hide the footer area in ArcGIS 4.14 */
.esri-popup__footer {
  display: none !important;
}

.map-popup-subtitle {
  font-size: 11px;
}

#legend-container {
  font-size: 0.85em;
}

.ui.button {
  border-radius: 0;
}

.legendOrdinal text {
  font-size: 0.9em;
}

.ui.dimmer {
  background-color: rgba(0, 0, 0, .4);
}

.ui.message {
  border-radius: 0;
  color: #5d5d5d;
}

.ui.segment {
  border-radius: 0;
  box-shadow: none;
  -webkit-box-shadow: none;
}

.ui.table {
  border-radius: 0;
}

.ui.basic.button {
  border-radius: 0;
}

/* Search bar */
#searchContainer .esri-input {
  background-color: #f5f4f3 !important;  /* #103350 */
  color: #757575 !important;
  font-family: inherit;
}

#searchContainer .esri-widget--button {
  background-color: #103350 !important;
  color: #fff !important;
}

/* Map popups for small screens */
.esri-popup--is-docked .esri-popup__header {
  padding: 0 !important;
}
 
.esri-popup__main-container {
  padding: 0 !important;
}

